Added API to fetch vault protected songs